--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "cors": "^2.8.6",
     "express": "^5.2.1",
     "node": "^25.5.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^7.13.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "tailwindcss": "^4.1.18",
     "zod": "^4.3.6"
   },
   "devDependencies": {
