--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "playloop",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://aahildf/.github.io/PlayLoop/",
   "type": "module",
   "scripts": {
     "dev": "vite",
